--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Internship Report</title>
 		<!--CSS Style start ---> 
+		<!--Dont change the CSS unless you want to modify it -->
 		<style type="text/css">
 			#main-header{
 				text-align: center;
